version/0.12/_sources/api/solver/_autosummary/settings/les_model_options.rst.txt
:orphan:

.. _les_model_options:

les_model_options
=================

.. currentmodule:: ansys.fluent.core.solver.settings_231.les_model_options

.. autoclass:: les_model_options
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================================   =======================================================================

Child                                                                                                                Summary

==================================================   =======================================================================
:ref:`dynamic_stress <dynamic_stress>`                                                  Enable/Disable Dynamic model option.

:ref:`dynamic_energy_flux <dynamic_energy_flux>`         Enable/disable the dynamic sub-grid scale turbulent Prandtl Number.

:ref:`dynamic_scalar_flux <dynamic_scalar_flux>`                                      Enable/Disable dynamic Schmidt Number.

:ref:`subgrid_dynamic_fvar <subgrid_dynamic_fvar>`               Enable/Disable the dynamic mixture fraction variance model.

==================================================   =======================================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`viscous <viscous>`       'viscous' child.

========================   ====================

