version/0.17/_sources/api/solver/_autosummary/settings/les_model_options.rst.txt
:orphan:

.. _les_model_options:

les_model_options
=================

.. autoclass:: ansys.fluent.core.solver.settings_232.les_model_options.les_model_options
    :show-inheritance:

.. rubric:: Attributes

==================================================   =============================================================================

Attribute                                                                                                                  Summary

==================================================   =============================================================================
:ref:`dynamic_stress <dynamic_stress>`                                                        Enable/Disable Dynamic model option.

:ref:`dynamic_energy_flux <dynamic_energy_flux>`               Enable/disable the dynamic sub-grid scale turbulent Prandtl Number.

:ref:`dynamic_scalar_flux <dynamic_scalar_flux>`                                            Enable/Disable dynamic Schmidt Number.

:ref:`subgrid_dynamic_fvar <subgrid_dynamic_fvar>`       Enable/Disable the dynamic subgrid-scale mixture fraction variance model.

:ref:`cvreman <cvreman>`                                                                            Set the Vreman Model constant.

:ref:`csigma <csigma>`                                                                               Set the Sigma Model constant.

:ref:`wall_model <wall_model>`                                                                   Enable/Disable Wall Model option.

:ref:`cw1 <cw1>`                                                                               Set the Wall Model coefficient Cw1.

:ref:`cw2 <cw2>`                                                                               Set the Wall Model coefficient Cw2.

==================================================   =============================================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`viscous <viscous>`       'viscous' child.

========================   ====================

